--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -42,7 +42,8 @@ header {
   }
 
   //@media screen and (min-width: 415px) and (max-width: 1024px) { 
-  @media screen and (min-width: 415px) {
+  //@media screen and (min-width: 415px) {
+    @media screen and (min-width: 429px) {
     .imgsp {
       margin-top: 1vw;
       margin-left: 16px;
