--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1275,6 +1275,10 @@
           border: 0 solid black;
           transform: translateY(-50%);
           z-index: 5;
+
+          &.disabled{
+            opacity: 0;
+          }
         }
 
         ::ng-deep .owl-prev {
@@ -1282,13 +1286,14 @@
         }
 
         ::ng-deep .owl-next {
-          right: 0;
+          right: -2px;
         }
 
         ::ng-deep .owl-prev i,
         ::ng-deep .owl-next i {
           color: #ccc;
           transform: scale(1);
+          background-color: #000;
         }
 
         ::ng-deep .owl-dots {
@@ -1577,7 +1582,7 @@
             &.subheading{
               overflow: hidden;
               ::ng-deep .mat-list-item-content{
-                flex-direction: column;
+                //flex-direction: column;
               }
               p{
                 font-size: 15px;
@@ -1598,7 +1603,7 @@
                   padding: 0.3em 0.5em;
                   border-radius: 0.5em;
                   width: 100%;
-
+                  word-break: break-all;
                   &.exps{
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
@@ -1616,7 +1621,7 @@
                 display: flex;
                 position: absolute;
                 bottom: 4px;
-                right: 7px;
+                right: 12px;
                 font-size: 12px;
                 color: #fff;
                 font-weight: 100;
