--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -457,8 +457,7 @@
               </div>
             </div>
             <div class="card-box">
-              <!--div class="card-header" (click)="linktoSpot(item)"-->
-              <div class='card-header'>
+              <div class="card-header" (click)="linktoSpot(item)">
                 <!-- 写真(複数枚) -->
                 <owl-carousel-o
                   *ngIf="item.previewPictures?.length > 1; else singlePict"
