--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -508,7 +508,7 @@ div.plandtl {
       }
 
       p {
-        font-family: "Noto Sans JP";
+        //font-family: "Noto Sans JP";
         line-height: 1.57;
         text-align: justify;
         text-justify: inter-ideograph;
