--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -749,7 +749,7 @@ p{
 }
 
 #spot-detail {
-  font-family: "Noto Sans JP", sans-serif;
+  //font-family: "Noto Sans JP", sans-serif;
   line-height: 1.8;
   text-align: justify;
   text-justify: inter-ideograph;
