--- a/src/app/pages/spot-list/spot-list.component.scss
+++ b/src/app/pages/spot-list/spot-list.component.scss
@@ -293,7 +293,7 @@
 
 // 以下不要？
 #spot-detail {
-  font-family: "Noto Sans JP", sans-serif;
+  //font-family: "Noto Sans JP", sans-serif;
   line-height: 1.8;
   text-align: justify;
   text-justify: inter-ideograph;
@@ -336,7 +336,7 @@
 // spot detailからコピー ここまで
 
 ::ng-deep .ngx-pagination {
-  font-family: "Noto Sans JP";
+  //font-family: "Noto Sans JP";
   font-size: 70%;
   padding: 10px 0;
   margin-left: 0;
@@ -555,7 +555,7 @@
 
   .staytime {
     ::ng-deep .mat-figure {
-      font-family: "Noto Sans JP";
+      //font-family: "Noto Sans JP";
       font-size: 0.9rem;
       justify-content: left;
       margin-left: 16px;
