--- a/src/app/pages/plan-list/plan-list.component.scss
+++ b/src/app/pages/plan-list/plan-list.component.scss
@@ -324,7 +324,7 @@
 }
 
 ::ng-deep .ngx-pagination {
-  //font-family: "Noto Sans JP";
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 70%;
   padding: 10px 0;
   margin-left: 0;
