--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  //font-family: "Noto Sans JP", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   // font: 400 "Open Sans", sans-serif;
   color: #666;
   -webkit-font-smoothing: antialiased;
@@ -19,11 +19,11 @@ h3,
 h4,
 h5,
 h6 {
-  //font-family: "Noto Sans JP";
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
-  //font-family: "Noto Sans JP";
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.7;
   text-align: justify;
   text-justify: inter-ideograph;
