--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -16,7 +16,7 @@
 
       &.title {
         font-size: 14px;
-        padding: 0 12px 10px;
+        padding: 4px 12px 8px;
       }
 
       &.input {
