--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/vars";
+@import "vars";
 
 @media screen and (min-width: 429px) and (max-width: 1024px) { 
   div.spotdtl{
