--- a/src/app/parts/message-dialog/message-dialog.component.scss
+++ b/src/app/parts/message-dialog/message-dialog.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/vars";
+@import "vars";
 ::ng-deep.cdk-global-overlay-wrapper{
   align-items: center!important;
   .cdk-overlay-pane {
