--- a/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.scss
+++ b/src/app/parts/image-cropper-dialog/image-cropper-dialog.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/vars";
+@import "vars";
 
 ::ng-deep mat-dialog-container#imgcrop{
   //background-color: $color-gld06;
