--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -1,4 +1,4 @@
-<div class="plandtl" (swiperight)="onSwipeRight($event,1)">
+<div class="plandtl">
   <mat-card id="plandtlheader" [ngClass]="{'onplan':match(planSpotids,myPlanSpots)}">
     <div class='link' (click)="linktolist()">
       <span class="frame">{{"BackEveryoneRecommendations" | translate}}</span>
